Cambio de idioma funcional

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,49 @@
 <resources>
     <string name="app_name">AplicacionRecetas</string>
-    <string name="title_activity_login">LoginActivity</string>
     <string name="nomUsuario">Nombre de usuario</string>
     <string name="contrasena">Contraseña</string>
+    <string name="buscarReceta">Buscar receta</string>
+    <string name="inicioSesion">Iniciar sesión</string>
+    <string name="registro">Registrarse</string>
+    <string name="volver">Volver</string>
+    <string name="linkRegistro">¿No tiene una cuenta? Regístrate aquí!</string>
+    <string name="confirmarContrasena">Confirmar contraseña</string>
+    <string name="buscarRecetas">Buscar recetas…</string>
+    <string name="nombre">Nombre:</string>
+    <string name="recetaPasos">Pasos a seguir:</string>
+    <string name="verIngredientes">Ver ingredientes</string>
+    <string name="addReceta">Añadir receta</string>
+    <string name="misRecetas">Mis recetas:</string>
+    <string name="cerrarSesion">Cerrar sesión</string>
+    <string name="volverMenu">Volver al menú</string>
+    <string name="addIngredientes">Añadir ingredientes</string>
+    <string name="nomReceta">Nombre de receta</string>
+    <string name="ingrediente">Ingrediente</string>
+    <string name="anadir">Añadir</string>
+    <string name="pulsaBorrar">*Pulsa un ingrediente para borrarlo.</string>
+    <string name="obtenerImagen">¿De dónde quieres obtener la imagen?</string>
+    <string name="idioma">Selecciona el idioma para la aplicación:</string>
+    <string name="cambiarIdioma">Cambiar idioma</string>
+    <string name="perfil">Ir al perfil</string>
+    <string name="toastNombreReceta">Que no se te olvide escribir el nombre de la receta!</string>
+    <string name="toastNameExist">Ese nombre ya existe, piensa otro para tu receta.</string>
+    <string name="toastPasosReceta">Que no se te olvide escribir los pasos de la receta!</string>
+    <string name="toastIngredientesReceta">Que no se te olviden escribir los ingredientes de la receta!</string>
+    <string name="notiRecetaAnadida">Receta añadida!</string>
+    <string name="notiLaReceta">La receta</string>
+    <string name="notiHaSidoAñadida">ha sido añadida.</string>
+    <string name="addNuevoIngrediente">Añade un nuevo ingrediente:</string>
+    <string name="ingredienteAnadido">Ingrediente añadido!</string>
+    <string name="aceptarPermiso">Si quieres sacar fotos tienes que aceptar el permiso.</string>
+    <string name="nomContrIncorrectas">Nombre o contraseña incorrectas.</string>
+    <string name="nombreVacio">El nombre no puede estar vacío.</string>
+    <string name="nombreLargo">El nombre no puede tener más de 20 letras.</string>
+    <string name="contraVacia">La contraseña no puede estar vacía.</string>
+    <string name="contraLarga">La contraseña no puede tener más de 20 letras.</string>
+    <string name="buscadorVacio">Que no se te olvide escribir el nombre de la receta!</string>
+    <string name="registroCorrecto">Registrado correctamente, inicia sesión y empieza a disfrutar!</string>
+    <string name="contraNoCoincide">Las contraseñas no coinciden.</string>
+    <string name="contraConfVacia">La contraseña de confirmación no puede estar vacía.</string>
+    <string name="contraConfLarga">La contraseña de confirmación no puede tener más de 20 letras.</string>
+    <string name="nombreEnUso">Ese nombre ya está en uso, prueba con otro.</string>
 </resources>
