Menú para eliminar añadido en perfil usuario
Solucionado problema con el paso de datos entre intents

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -54,4 +54,6 @@
     <string name="descargarReceta">Download recipe</string>
     <string name="recetaDescargada">Recipe downloaded!</string>
     <string name="notiDescarga">has been downloaded.</string>
+    <string name="eliminarUsuario">Are you sure you want to delete your account?</string>
+    <string name="guardar">Save</string>
 </resources>
